kubernetes/ingress/svc-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:us-east-1:109798190983:certificate/4a02ad1f-3e3b-4c75-8205-79315143cde0"
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "tcp"
spec:
  type: LoadBalancer
  ports:
    - name: http # needs to have a name to work
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https # needs to have a name to work
      port: 443
      targetPort: 80  # NLB terminates TLS; forward decrypted traffic to NGINX's HTTP port
      protocol: TCP
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
